# cesnet_service_path_plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  configuration_testing.py  mkdocs.yml  netbox-plugin.yaml  package-lock.json  package.json  pyproject.toml  requirements_dev.txt
cesnet_service_path_plugin/: __init__.py  navigation.py  search.py  template_content.py  urls.py  version.py
cesnet_service_path_plugin/api/: urls.py
cesnet_service_path_plugin/filtersets/: contract_info.py  segment.py  service_path.py  service_path_segment_mapping.py
cesnet_service_path_plugin/forms/: __init__.py  contract_info.py  map.py  segment.py  service_path.py  service_path_segment_mapping.py
cesnet_service_path_plugin/graphql/: filters.py  schema.py  types.py
cesnet_service_path_plugin/migrations/: 0027_remove_segment_provider_segment_contract_and_more.py  0028_alter_segment_location_a_alter_segment_location_b.py  0029_remove_segment_provider_segment_contract_and_more.py  0030_alter_segment_location_a_alter_segment_location_b.py  0032_segment_ownership_type.py  (+8 more)
docs/: API_path.md  TESTING.md  graphQL_examples.md
js_tests/: edit_mode_api.test.js  edit_mode_state_machine.test.js  segment_path_geometry.test.js
komora_service_path_plugin/: __init__.py  navigation.py  template_content.py  urls.py  version.py
tests/: test_integration_dark_fiber_data_api.py  test_integration_ethernet_service_data_api.py  test_integration_optical_spectrum_data_api.py  test_integration_segment_contract_info_api.py  test_integration_segment_financial_info_api.py  test_integration_segment_workflow.py  test_komora_service_path_plugin.py
(+151 files in other folders)
