[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesnet_service_path_plugin"
version = "6.2.2b2"
description = "Adds ability to create, edit and view service paths in the network."
authors = [
    {name = "Jan Krupa", email = "jan.krupa@cesnet.cz"},
    {name = "Jiri Vrany", email = "jiri.vrany@cesnet.cz"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas",
    "fiona",
    "shapely",
    "python-dateutil",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/CESNET/cesnet_service_path_plugin"
Repository = "https://github.com/CESNET/cesnet_service_path_plugin"
Issues = "https://github.com/CESNET/cesnet_service_path_plugin/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "djlint",
    "pip",
    "check-manifest",
    "pytest",
    "python-dotenv",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
# This replaces find_packages()
where = ["."]
include = ["cesnet_service_path_plugin*"]

[tool.setuptools.package-data]
# This replaces include_package_data=True
"*" = ["*"]

[tool.uv]
exclude-newer = "7 days"

